--- a/contacto.html
+++ b/contacto.html
@@ -31,9 +31,8 @@
 
     <input type="submit" value="Enviar">
   </form>
-
   <footer>
-  <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
-</footer>
+    <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
+  </footer>
 </body>
 </html>
