--- a/donacion.html
+++ b/donacion.html
@@ -26,9 +26,8 @@
       </ul>
     </nav>
   </header>
-
   <footer>
-    <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
+    <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
   </footer>
 </body>
 </html>
