--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     </header>
     <h1>¡GRACIAS POR COMPLETAR ESTE FORMULARIO!</h1>
     <footer>
-      <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
+      <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
     </footer>
 </body>
 </html>
