--- a/info.html
+++ b/info.html
@@ -37,7 +37,7 @@ Las consecuencias de este deterioro son variadas y puede ser la extinción de es
 <img src="https://s1.significados.com/foto/31788328906-a4984be841-k.jpg" width="630" height="450">
 
 <footer>
-  <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
+  <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
 </footer>
 </body>
 </html>
