--- a/temas.html
+++ b/temas.html
@@ -21,8 +21,8 @@
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSepwtiqbM4RHGDWH_Lha33XjV9_wJB1Z_hfX4CfQNDYolOE-w/viewform?embedded=true" width="640" height="1549" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
-<footer>
-  <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
-</footer>
+    <footer>
+      <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
+    </footer>
 </body>
 </html>
