--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 <footer>
-<p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
+<p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
 </footer>
 </body>
 </html>
