--- a/sobre.html
+++ b/sobre.html
@@ -54,7 +54,7 @@
   </main>
   <img src="https://i0.wp.com/image.slidesharecdn.com/educacionambiental-powerpoint-101203222455-phpapp01/95/educacion-ambiental-powerpoint-4-728.jpg" width="600" height="450">
   <footer>
-    <p>Derechos de autor GonzaRo-YamilDa; 2023 | Página de Concientización Ambiental</p>
+    <p>Derechos de autor GonzaRo; 2023 | Página de Concientización Ambiental</p>
   </footer>
 </body>
 
